@@ -1,3 +1,8 @@
+2012-12-29  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/package.el (package-untar-buffer): Improve integrity
+	check for the tarball contents.
+
 2012-12-29  Matt Fidler  <matt.fidler@alcon.com>  (tiny change)
 
 	* emacs-lisp/package.el (package-untar-buffer): Handle problematic
